--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   },
