--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack --mode=production",
+    "postinstall": "webpack",
     "start": "webpack --watch --mode=development"
+  },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "11.10.1"
   },
   "author": "dean",
   "license": "ISC"
